2002-04-14  Adam Fedor  <fedor@gnu.org>

	* Headers/x11/XGServerWindow.h: Add graphics driver protocol
	information.
	* Source/x11/XGServerWindow.m (_createBuffer:): Use it.
	(-termwindow:): Idem.
	([XGServer -windowbacking::win]): Idem.
	([XGServer -windowdevice:]): Idem.
	([XGServer -_addExposedRectangle::]): Idem.
	([XGServer -flushwindowrect::]): Idem.

	* Source/xlib/XGBitmapImageRep.m: Use new GSCurrentDevice.
	* Source/xlib/XGContext.m: Idem.
	* Headers/xlib/XGGState.h: Use window device, not window number.
	* Source/xlib/XGGState.m: Idem.

Thu Apr 11 22:24:01 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/x11/XGServerEvent.m: Added missing includes.
	* Source/x11/XGServerWindow.m: Idem.
	* Source/x11/XGDragView.m: Idem.
	2
2002-04-11  Richard Frith-Macdonald  <rfm@gnu.org>

	* Tools/gpbs.m: Fixed bug in argument parsing ... was objecting to
	-NSHost!

2002-04-10  Adam Fedor  <fedor@gnu.org>

	* configure.in: Don't set X paths if no X found. Only set
	/usr/local paths for freebsd

	* Source/gsc/GSContext.m: Remove currentgstate, gstate
	* Source/x11/XGServerWindow.m (windowbacking:) Implement.

2002-04-06  Adam Fedor  <fedor@gnu.org>

	* configure.in: Renable XIM by default again.

	* Source/gsc/GSStreamContext.m (GSSetFont:): Implement.
	Fix up show methods and fix spaces in method names.

	* Source/xlib/XGContext.m (-initWithContextInfo:): Return
	alternate (PS) context when indicated.

	* Source/xlib/xrtools.c: Simplify color conversion routines.
	* Source/xlib/XGGState.m: Use them
	
2002-04-03  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile.preamble: Fix LIB_DIRS and
	LIBRARIES_DEPEND_UPON for compiling as a library.

2002-04-02  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSContext.m (-GSDefineGState): Use new def - also
	creates a copy of the gstate.
	(-GSReplaceGState): Replace with copy of current gstate.

	* configure.in (--with-name): Configure the name of the backend
	* back.make.in: Idem.
	* config.make.in: Idem.