@@ -1983,7 +1983,7 @@ NSDebugLLog(@"Frame", @"X2O %d, %@, %@", win->number,
 	  /* Temporary protocol until we standardize the backing buffer */
 	  NSRect rect = NSMakeRect(rectangle.x, rectangle.y, 
 				   rectangle.width, rectangle.height);
-	  [NSGraphicsContext handleExposeRect: rect
+	  [[GSCurrentServer() class] handleExposeRect: rect
 			     forDriver: window->gdriver];
 	}
       else
@@ -2056,7 +2056,7 @@ NSDebugLLog(@"Frame", @"X2O %d, %@, %@", win->number,
       if ((window->gdriverProtocol & GDriverHandlesBacking))
 	{
 	  /* Temporary protocol until we standardize the backing buffer */
-	  [NSGraphicsContext handleExposeRect: rect
+	  [[GSCurrentServer() class] handleExposeRect: rect
 			     forDriver: window->gdriver];
 	}
 	else
